-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11.0.6, 13, 14
-
Component/s: hotspot
-
b29
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8236781 | 15 | Goetz Lindenmaier | P3 | Resolved | Fixed | b05 |
| JDK-8246422 | 13.0.4 | Goetz Lindenmaier | P3 | Resolved | Fixed | b04 |
| JDK-8236999 | 11.0.7-oracle | Goetz Lindenmaier | P3 | Resolved | Fixed | b02 |
| JDK-8237332 | 11.0.7 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
Since 8224193 the char* of the stringStream is malloced and thus must be freed. No doing so manifests a memory leak.
This is only relevant if the corresponding tracing is active.
- backported by
-
JDK-8236781 [C2] Memory leaks during tracing after "8224193: stringStream should not use Resource Area".
-
- Resolved
-
-
JDK-8236999 [C2] Memory leaks during tracing after "8224193: stringStream should not use Resource Area".
-
- Resolved
-
-
JDK-8237332 [C2] Memory leaks during tracing after "8224193: stringStream should not use Resource Area".
-
- Resolved
-
-
JDK-8246422 [C2] Memory leaks during tracing after "8224193: stringStream should not use Resource Area".
-
- Resolved
-
- relates to
-
JDK-8224193 stringStream should not use Resource Area
-
- Resolved
-
-
JDK-8007988 PrintInlining output is inconsistent with incremental inlining
-
- Resolved
-
-
JDK-8236414 stringStream allocates on both ResourceArea and C-heap
-
- Closed
-