8235998: [c2] Memory leaks during tracing after '8224193: stringStream should not use Resource Area'

Reviewed-by: dholmes, kvn